# engsci-thesis

./: .gitattributes  .gitignore  .gitmodules  Dockerfile  add_execute_permission.sh  apptainer-make.sh  cedar_instructions.txt  lit_review.md  mem.sv  readme.md  requirements.txt  temp.txt  useful_commands.txt  weekly_progress.pptx
.devcontainer/: devcontainer.json
asic/: CiM_centralized_mem_map.xlsx  CiM_mem_map.xlsx  Makefile  launch_cadence.sh  launch_dv.sh  readme.md  testbench.py
asic/fixed_point_accuracy_study/: accuracy_study_results.csv  dummy_softmax_0.csv  model_weights.h5  readme.md  results_concatenator.py  results_template.csv  results_template.xlsx  run_accuracy_study_compute_canada.sh  start_study.sh
asic/func_sim/: CMakeLists.txt  CiM.cpp  CiM.hpp  Makefile  Master_Ctrl.cpp  Master_Ctrl.hpp  Misc.hpp  func_sim.cpp  func_sim.hpp  hw-sw_optimizations.md  readme.md  results_description.txt  sample_eeg.csv  step_by_step_inference.md
asic/func_sim/Xilinx_Precision_Types/include/: ap_fixed.h  ap_int.h
asic/func_sim/data/: params.h5  params_1_enc.h5
asic/func_sim/include/: CiM.hpp  CiM_Centralized.hpp  CiM_Compute.hpp  Compute_Verification.hpp  Func_Sim.hpp  Master_Ctrl.hpp  Memory_Map.hpp  Misc.hpp  Param_Layer_Mapping.hpp  func_sim.hpp
asic/func_sim/reference_data/: class_emb.csv  class_embedding.csv  clip_with_class_embedding.csv  clip_with_class_embedding_and_pos_emb.csv  dummy_softmax_0.csv  dummy_softmax_1.csv  eeg.h5  enc_K_dense.csv  enc_Q_dense.csv  enc_V_dense.csv  enc_layernorm1.csv  enc_layernorm2.csv  enc_mlp_dense1.csv  enc_output.csv  enc_post_last_res_sum.csv  enc_post_res_sum_1.csv  enc_res_sum_1.csv  enc_scaled_score_0.csv  enc_scaled_score_1.csv  enc_scaled_score_2.csv  enc_scaled_score_3.csv  enc_scaled_score_4.csv  enc_scaled_score_5.csv  enc_scaled_score_6.csv  enc_scaled_score_7.csv  enc_softmax_0.csv  enc_softmax_1.csv  enc_softmax_2.csv  enc_softmax_3.csv  enc_softmax_4.csv  enc_softmax_5.csv  enc_softmax_6.csv  enc_softmax_7.csv  enc_softmax_mult_V.csv  input.csv  input_rescaled.csv  mlp_head.csv  mlp_head_layernorm.csv  mlp_head_out.csv  mlp_head_softmax.csv  (+8 more)
asic/func_sim/reference_data/model.tf/: fingerprint.pb  keras_metadata.pb  saved_model.pb
asic/func_sim/reference_data/model.tf/variables/: variables.data-00000-of-00001  variables.index
asic/func_sim/src/: CiM.cpp  CiM_Centralized.cpp  Compute_Verification.cpp  Func_Sim.cpp  Master_Ctrl.cpp  func_sim.cpp
asic/ip_verif/: utilities.py
asic/prototype/: prototype.cpp  prototype.h
asic/rtl/: parameters.svh  requirements.txt  top.sv  top_init.sv  types.svh  utilities.py
asic/tutorial/: encoder.sv  encoder_tb.sv
hdl/: Makefile  top.v
latex/: lit_review.md  references.bib  thesis.aux  thesis.bbl  thesis.bcf  thesis.blg  thesis.fdb_latexmk  thesis.fls
latex/interim_report/: interim_report.tex  interim_report_notes.md
latex/proposal/: proposal.tex  proposal_notes.md  references.bib
latex/thesis/: acknowledgements.aux  acknowledgements.tex  acronyms.tex  analysis_and_future_work  analysis_and_future_work.tex  appendices.tex  data.aux  data.tex  flyleaf.aux  (+12 more)
python_prototype/: edf_extract.py  edgetpu_runner.py  lit_review.md  literature_review_notes.md  main.py  main_vision_transformer.py  requirements.txt  run_edf_extract.sh  run_edf_extract_cbcr.sh  run_tf_proto.sh  run_tf_vit_proto.sh  run_vit_cbcr.sh  tensorflow_dataset_processing_measurements.xlsx  utilities.py
(+464 files in other folders)
